# Customer-Support-Agent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  implementation_plan.md  package-lock.json  pyproject.toml  requirements.txt
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 2026_02_18_0001_add_resolved_by.py
docs/: 01_environment_setup.md  02_project_setup.md  03_database_models.md  04_core_agent.md  05_api_routes.md  API_KEYS_SETUP.md  COMPLETE_PROJECT_GUIDE.md  ENGINEERING_GUIDE.md  HOW_TO_RUN.md  PROJECT_STRUCTURE.md  README.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/conversations/[id]/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/tickets/[id]/: page.tsx
frontend/src/hooks/: useAuth.ts  useSidebar.ts
frontend/src/lib/: api.ts  supabase.ts
scripts/: README.md  seed_kb.py  test_agent.py
src/: README.md  __init__.py  config.py  main.py
src/agents/: README.md  __init__.py  graph.py  llm.py  models.py  state.py  tools.py
src/agents/edges/: README.md  __init__.py  conditions.py
src/agents/nodes/: README.md  __init__.py  classifier.py  escalator.py  resolver.py  validator.py
src/api/: README.md
src/api/middleware/: README.md  auth.py  rate_limit.py
src/api/routes/: README.md  __init__.py  admin.py  analytics.py  tickets.py  webhooks.py
src/api/schemas/: README.md  __init__.py  responses.py  ticket.py
src/db/: README.md  __init__.py  models.py  session.py
src/db/repositories/: README.md  customer_repo.py  ticket_repo.py
src/services/: README.md  analytics_service.py  embedding_service.py  ticket_service.py
src/tools/: README.md  __init__.py  customer_service.py  external_apis.py  knowledge_base.py  notifications.py
src/utils/: README.md  logging.py  metrics.py
tests/: README.md
