[project]
name = "customer-support-agent"
version = "0.1.0"
description = "AI-powered autonomous customer support system with LangGraph"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ============================================
    # Core Web Framework
    # ============================================
    "fastapi>=0.115.0",           # Modern async web framework
    "uvicorn[standard]>=0.32.0",  # ASGI server to run FastAPI
    
    # ============================================
    # LangChain + LangGraph (Agent Framework)
    # ============================================
    "langgraph>=0.2.0",           # State machine for agent workflows
    "langchain>=0.3.0",           # LLM orchestration framework
    "langchain-groq>=0.2.0",      # Groq LLM integration (FREE)
    "langchain-google-genai>=2.0.0", # Google AI Studio / Gemini (FREE)
    
    # ============================================
    # Database
    # ============================================
    "sqlalchemy>=2.0.0",          # Python ORM for database operations
    "asyncpg>=0.30.0",            # Async PostgreSQL driver
    "alembic>=1.14.0",            # Database migration tool
    "pgvector>=0.3.0",            # Vector similarity search
    
    # ============================================
    # Data Validation & Configuration
    # ============================================
    "pydantic>=2.0.0",            # Data validation using type hints
    "pydantic-settings>=2.0.0",   # Settings management from env vars
    "python-dotenv>=1.0.0",       # Load .env files
    
    # ============================================
    # HTTP & Async Utilities
    # ============================================
    "httpx>=0.28.0",              # Async HTTP client
    "redis>=5.0.0",               # Redis client for caching
    "tenacity>=9.0.0",            # Retry logic for external APIs
    
    # ============================================
    # Logging & Monitoring
    # ============================================
    "structlog>=24.0.0",          # Structured logging (JSON format)
    
    # ============================================
    # Embeddings (FREE - runs locally)
    # ============================================
    "sentence-transformers>=3.0.0", # Text embeddings for RAG
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",              # Testing framework
    "pytest-asyncio>=0.24.0",     # Async test support
    "pytest-cov>=6.0.0",          # Code coverage
    "ruff>=0.8.0",                # Fast Python linter
    "mypy>=1.13.0",               # Static type checker
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
